<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newtoncode.app.luckymonkeyhelper.ui.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="centerInside"
        android:src="@drawable/bg_main_top" />

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="@color/colorPrimary">

        <Button
            style="@style/ToolBarButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_toolbar_btn_selector"
            android:onClick="toOpenHistory"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/action_history" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolBarTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name_title" />


        <Button
            style="@style/ToolBarButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_toolbar_btn_selector"
            android:onClick="toOpenSettings"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/setting" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar">

        <RelativeLayout
            android:id="@+id/container_top_tips"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:visibility="visible">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_main" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_count_top">

                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="0"
                        android:textColor="@color/text_main_count"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tv_count"
                        android:layout_marginLeft="25dp"
                        android:layout_toRightOf="@+id/tv_count"
                        android:text="次"
                        android:textColor="@color/text_main_count"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_desc_top"
                    android:gravity="center"
                    android:text="已帮您抢的红包"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_money_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_money_count_top"
                    android:gravity="center"
                    android:text="@string/helper_monkey_total_money"
                    android:textColor="@color/text_main_desc"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_open_service"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/main_open_button_top"
                    android:background="@drawable/bg_button_item_selector"
                    android:onClick="toOpen"
                    android:text="@string/main_open_service"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

            </LinearLayout>


            <com.newtoncode.lib.ads.views.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:ad_layout="@layout/view_ad_simple_splash"
                app:ad_name="main_ad"
                app:ad_size="Banner"
                app:admob_unit_id="@string/ad_main_admob"
                app:tencent_unit_id="@string/ad_main_tencent" />


        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yw_1222"
        android:visibility="gone" />
</RelativeLayout>
