<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.newtoncode.app.luckymonkeyhelper.ui.activity.AboutUsActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/common_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/app_name_title"
                    android:textColor="@color/common_text"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_version_name"
                    android:textColor="@color/common_text_desc"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="serviceRule"
                android:background="?android:attr/selectableItemBackground"
                android:descendantFocusability="blocksDescendants"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/TextTheme.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/use_statement" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/common_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="checkUpdate"
                android:background="?android:attr/selectableItemBackground"
                android:descendantFocusability="blocksDescendants"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/TextTheme.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="版本更新" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
