<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    tools:context="com.newtoncode.app.luckymonkeyhelper.ui.activity.SettingsActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/st_red_model"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextTheme.Normal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/rush_mode" />

                    <!--android:tint="#d9d9d9"指定图片颜色-->
                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:src="@drawable/ic_keyboard_arrow_right_white_24dp"-->
                    <!--android:id="@+id/imageView" />-->


                    <Switch
                        android:id="@+id/switch_rush_mode"
                        style="@style/TextTheme.Desc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:switchMinWidth="45dp"
                        android:switchPadding="5dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/common_line"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/st_update_config"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:visibility="gone">

                    <TextView
                        style="@style/TextTheme.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/update_config" />

                    <TextView
                        style="@style/TextTheme.Desc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="已是最新配置" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/common_bg" />


                <RelativeLayout
                    android:id="@+id/st_usual_method"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        style="@style/TextTheme.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/use_strategy" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/common_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/st_score"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        style="@style/TextTheme.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/go_score" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/common_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/st_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        style="@style/TextTheme.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/feed_back" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/common_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/st_about"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TextView
                        style="@style/TextTheme.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/about" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />

                </RelativeLayout>


            </LinearLayout>

            <com.newtoncode.lib.ads.views.AdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:ad_layout="@layout/view_ad_simple_splash"
                app:ad_name="settings_ad"
                app:ad_size="360x320"
                app:admob_unit_id="@string/ad_usage_admob"
                app:tencent_unit_id="@string/ad_usage_tencent" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
